[tool.poetry]
name = "autoboot"
version = "0.1.0"
description = "Have you tried switching it off and switching it back on to see if it works?"
authors = ["Akashdeep Dhar <akashdeep.dhar@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/t0xic0der/autoboot"
repository = "https://github.com/t0xic0der/autoboot"
documentation = "https://github.com/t0xic0der/autoboot/blob/main/README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.9.1"
webdriver-manager = "^3.8.6"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
flake8 = "<4"
pytest = "^6.2.5"
pytest-black = "^0.3.12"
pytest-flake8 = "^1.0.7"
pytest-isort = "^3.0.0"
black = "^23.0.0"

[tool.pytest.ini_options]
addopts = "--black --isort --flake8"
flake8-max-line-length = 100
#filterwarnings = ["ignore::DeprecationWarning:flake8:254"]

[tool.isort]
line_length = 100
profile = "black"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
autoboot = "autoboot.main:main"
